--- a/tsconfig.json
+++ b/tsconfig.json
@@ -32,7 +32,7 @@
     "paths": {}, // 模块名到基于 baseUrl 的路径映射的列表
     "rootDirs": [], // 根文件夹列表，其组合内容表示项目运行时的结构内容
     "typeRoots": [], // 包含类型声明的文件列表
-    "types": ["@types/node"], // 需要包含的类型声明文件名列表
+    "types": [], // 需要包含的类型声明文件名列表
     "allowSyntheticDefaultImports": true, // 允许从没有设置默认导出的模块中默认导入。
 
     /* 其他选项 */
