upd: 加入ts-node调试

--- a/package.json
+++ b/package.json
@@ -27,5 +27,8 @@
       "pre-commit": "f2elint commit-file-scan",
       "commit-msg": "f2elint commit-msg-scan"
     }
+  },
+  "dependencies": {
+    "ts-node": "^9.1.1"
   }
 }
