--- a/tsconfig.json
+++ b/tsconfig.json
@@ -28,17 +28,19 @@
 
     /* 模块解析选项 */
     "moduleResolution": "node", // 选择模块解析策略： 'node' (Node.js) or 'classic' (TypeScript pre-1.6)
-    "baseUrl": "./", // 用于解析非相对模块名称的基目录
-    "paths": {}, // 模块名到基于 baseUrl 的路径映射的列表
+    "baseUrl": "src", // 用于解析非相对模块名称的基目录
+    "paths": {
+      "@/*": ["./*"]
+    }, // 模块名到基于 baseUrl 的路径映射的列表
     "rootDirs": [], // 根文件夹列表，其组合内容表示项目运行时的结构内容
     "typeRoots": [], // 包含类型声明的文件列表
-    "types": [], // 需要包含的类型声明文件名列表
+    "types": ["@types/jest"], // 需要包含的类型声明文件名列表
     "allowSyntheticDefaultImports": true, // 允许从没有设置默认导出的模块中默认导入。
 
     /* 其他选项 */
     "experimentalDecorators": true, // 启用装饰器
     "emitDecoratorMetadata": true // 为装饰器提供元数据的支持
   },
-  "include": ["src/**/*"],
-  "exclude": ["node_modules", "**/*.spec.ts"]
+  "include": ["src/**/*", "test/*.spec.ts"],
+  "exclude": ["node_modules"]
 }
