--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "@babel/preset-env": "^7.14.1",
     "@types/jest": "^26.0.23",
     "babel-jest": "^26.6.3",
-    "f2elint": "^1.1.2",
+    "f2elint": "^1.2.3",
     "jest": "^26.6.3",
     "ts-jest": "^26.5.5",
     "typescript": "^4.2.3"
@@ -30,7 +30,7 @@
   "husky": {
     "hooks": {
       "pre-commit": "f2elint commit-file-scan",
-      "commit-msg": "f2elint commit-msg-scan"
+      "commit-msg": "npx commitlint -E HUSKY_GIT_PARAMS"
     }
   }
 }
